# calibre-plugins

./: .gitignore  .gitlint  .lefthook.yml  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  cliff.toml  compose.yml  data.json  devenv.nix  devenv.yaml  justfile  mise.toml  package.sh  pyproject.toml  sonar-project.properties
.calibre/: .gitignore  Taskfile.yml  justfile
.github/: codecov.yml  release.sh  renovate.json
.github/actions/install/: action.yml
.github/workflows/: build.yaml  test.yaml
hooks/: calibre_build.py
hooks/hatch-calibre-bundle/: pyproject.toml
hooks/hatch-calibre-bundle/src/hatch_calibre_bundle/: hooks.py  plugin.py
libs/common/: pyproject.toml
libs/common/src/common/: graphql.py  utils.py
libs/common/test/common/: test_graphql.py  test_utils.py
libs/graphql/src/graphql/: __init__.py  client.py
libs/graphql/test/graphql/: test_client.py  test_graphql.py
plugins/hardcover/: CHANGELOG.md  README.md  pyproject.toml
plugins/hardcover-sync/: pyproject.toml
plugins/hardcover-sync/src/hardcover_sync/: __init__.py  action.py  models.py  provider.py  queries.py
plugins/hardcover/src/: __init__.py  __version__.py  config.py  models.py  queries.py  source.py
plugins/hardcover/src/hardcover/: __init__.py  identifier.py  models.py  provider.py  queries.py  source.py
plugins/hardcover/test/: conftest.py  test_identifier.py  test_provider.py  utils.py
plugins/hardcover/test/data/: find_books_by_id.json
plugins/manga-chapters/: README.md  pyproject.toml
plugins/manga-chapters/src/manga_chapters/: __init__.py  config.py  llm.py  main.py
plugins/manga-toc/: pyproject.toml
plugins/manga-toc/src/manga_toc/: config.py  main.py
scripts/: build_env.py  bump-postcommit.sh  bump-precommit.sh  bundle.py  bundle.sh  init_library.sh  package_plugins.sh  release.sh
src/common/: api_config.py  graphql.py
src/hardcover/: __init__.py  models.py  source.py
