[build-system]
requires = ["hatchling", "hatch-zipped-directory"]
build-backend = "hatchling.build"

[project]
name = "calibre-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.9"
dependencies = ["pyqt5>=5.15.11"]

[tool.uv.workspace]
members = ["plugins/*", "hooks/*"]

[dependency-groups]
dev = ["hatch>=1.13.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
