[project]
name = "calibre-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.9"
dependencies = ["pyqt5>=5.15.11"]

[tool.uv.workspace]
members = ["plugins/*", "hooks/*", "libs/*"]

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
    "hatch>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-datafiles>=3.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]

[tool.coverage.run]
branch = true
omit = ["*test*"]
source = ["hooks", "libs", "plugins"]

[tool.pytest.ini_options]
addopts = "--cov -v"
