[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-calibre-bundle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["hatchling >=1.4.1, !=1.19.0", "tomli>=2.0.2"]

[project.entry-points.hatch]
calibre = "hatch_calibre_bundle.hooks"
