[project]
name = "hardcover"
version = "0.1.0"
description = "Hardcover Metadata Source Plugin for Calibre"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.9"
dependencies = ["common"]

[tool.uv.sources]
common = { workspace = true }

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump(hardcover): -> {new_version}"
pre_commit_hook = "../../scripts/bump-precommit.sh"
post_commit_hook = "../../scripts/bump-postcommit.sh"
commit = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
	'^version = "{version}"$',
	'^current_version = "{version}"$',
]
"src/hardcover/__version__.py" = ['^__version__ = "{version}"$']
