[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover"
dynamic = ["version"]
description = "Hardcover Metadata Source Plugin for Calibre"
readme = "README.md"
authors = [{ name = "Rob Brazier", email = "git+github@brzr.co" }]
requires-python = ">=3.9"
dependencies = ["common", "graphql"]

[tool.uv.sources]
common = { workspace = true }
graphql = { workspace = true }

[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"
version_file = "src/hardcover/_version.py"
root = "../../"
tag_regex = '^hardcover-(?P<version>\d+(?:\.\d+){0,2})$'
version_file_template = '''
__version__ = "{version}"
__version_tuple__ = {version_tuple}
'''
